change RoleID to String (#66)
Co-authored-by: ggmaleva <ggmaleva@yandex.ru>